--- a/views/index.jade
+++ b/views/index.jade
@@ -15,3 +15,5 @@ block content
       a(href="/tutorial04.html") Name tag
     li
       a(href="/tutorial05.html") Editable name tag
+    li
+      a(href="/paper01.html") Paper Tutorial
